--- a/css/about.css
+++ b/css/about.css
@@ -44,7 +44,7 @@
 .franchise-btn{
     background-color: transparent;
     color: #ffffff;
-    width: 150px;
+    width: 170px;
     height: 60px;
     border: 1px solid #ffffff;
     border-radius: 28px;
@@ -61,8 +61,9 @@
     width: 150px;
     height: 60px;
     border: 1px solid #ed1c24;
-    border-radius: 29px;
-    padding: 21px;
+    border-radius: 28px;
+    padding: 20px;
+    margin-right: 10px;
 }
 .order-btn:hover{
     color: #000000;
@@ -157,7 +158,7 @@ hr{
 
 
 .snp-franchise span{
-    font-family: 'Caveat', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-size: 3rem;
 }
@@ -167,6 +168,7 @@ hr{
     font-weight: 500;
     text-align: center;
     padding: 30px 0px;
+    margin-top: 50px;
 }
 
 .snp-franchise img{
@@ -189,7 +191,7 @@ hr{
 
 
 .snp-f-content span{
-    font-family: 'Caveat', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-size: 3rem;
 }
@@ -218,7 +220,7 @@ hr{
 
 
 .snp-express span{
-    font-family: 'Caveat', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-size: 3rem;
 }
@@ -236,6 +238,7 @@ hr{
     font-weight: 500;
     text-align: center;
     padding-top: 30px;
+    margin-top: 50px;
 }
 
 .snp-express p{
@@ -275,12 +278,12 @@ hr{
 
 .snp-express-franchise{
     background-color: #000000;
-    height: 1150px;
+    height: 1350px;
 }
 
 
 .snp-express-franchise span{
-    font-family: 'Caveat', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-size: 3rem;
     margin-top: 20px;
@@ -291,6 +294,7 @@ hr{
     font-weight: 500;
     text-align: center;
     padding: 30px 0px;
+    margin-top: 100px;
 }
 
 .snp-express-franchise-box{
@@ -334,12 +338,12 @@ hr{
 
 #snp-vf{
     background-color: #000000;
-    height: 550px;
+    height: 1000px;
     color: #ffffff;
 }
 
 #snp-vf span{
-    font-family: 'Caveat', cursive;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 3rem;
     
 }
@@ -399,7 +403,7 @@ footer{
     display: flex;
     justify-content: space-evenly;
     padding-top: 40px;
-    margin-top: 235%;
+    margin-top: 250%;
 }
 
 
